Json adapter started.

--- a/P1_ConnectionBus/Common/Common.csproj
+++ b/P1_ConnectionBus/Common/Common.csproj
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -41,14 +44,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="JSONRequestGenerator.cs" />
+    <Compile Include="JSONToXMLAdapter\JSONToXML.cs" />
+    <Compile Include="WebClientAdapter\ERequest.cs" />
+    <Compile Include="WebClientAdapter\JSONRequestGenerator.cs" />
     <Compile Include="Model\ConnectionModel.cs" />
     <Compile Include="Model\ConnectionTypeModel.cs" />
-    <Compile Include="Model\JSONRequestModel.cs" />
+    <Compile Include="WebClientAdapter\JSONRequestModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Model\ResourceModel.cs" />
     <Compile Include="Model\ResourceTypeModel.cs" />
-    <Compile Include="Validations.cs" />
+    <Compile Include="Helper\Validations.cs" />
+    <Compile Include="XMLToDBAdapter\XMLToDBAdapter.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
